--- a/software.html
+++ b/software.html
@@ -39,6 +39,22 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q6M9VfwG&k=Job&j=oitsbfw8&__jvst=Employee&__jvsd=sjOYzhwq&__jvsc=Twitter&bid=nxg0pMwt'>New Relic Careers - Senior Software Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-31</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/incontact/job/oG6sbfw9'>NICE inContact Careers - Senior Specialist Software Engineer Java & AWS</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=oohYafwx&__jvst=Employee+Referral&__jvsd=sbDU6fwy&__jvsc=Twitter&bid=n6AZpMwl'>Cirrus Logic Careers - Embedded ARM Software Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-31</p>
+<hr/>
+<h5><a href='http://hangar.applytojob.com/apply/jPr1KFzP0h/Sr-Software-Engineer'>Sr. Software Engineer - Hangar - Career Page</a></h5> 
+<p><span class="badge badge-light">Austin, TX</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/ZARecruiting/743999698605781-software-engineer-ii-global-fortune-company'>Z&A Recruiting Software Engineer II ? Global Fortune Company | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-31</p>
@@ -59,7 +75,7 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Renaissance/743999698601585-senior-software-engineer'>Renaissance Senior Software Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Renaissance/743999698601585-senior-software-engineer'>Renaissance Senior Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -103,7 +119,7 @@
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=oF9jbfw2&__jvst=Employee+Referral&__jvsd=shUBLhwj&__jvsc=Twitter&bid=nu0RpMw1'>Jobvite, Inc. Careers - Senior Software Engineer (Platform)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=oF9jbfw2&__jvst=Employee+Referral&__jvsd=shUBLhwj&__jvsc=Twitter&bid=nu0RpMw1'>Jobvite, Inc. Careers - Senior Software Engineer (Platform)</a></h5> 
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -111,7 +127,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qLHaVfwh&k=Job&j=ogMhbfwe&__jvst=Employee&__jvsd=syFcciwo&__jvsc=Twitter&bid=nviQpMwj'>Egnyte Careers - Software Engineer (Hybrid Cloud)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qLHaVfwh&k=Job&j=ogMhbfwe&__jvst=Employee&__jvsd=syFcciwo&__jvsc=Twitter&bid=nviQpMwj'>Egnyte Careers - Software Engineer (Hybrid Cloud)</a></h5> 
 <p><span class="badge badge-light">Raleigh, North Carolina</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -123,7 +139,7 @@
 <p><span class="badge badge-light">Tokyo Tokyo Tokyo, Japan</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/postmates/jobs/1486667?gh_src=843d815d1'>Job Application for Software Engineer, Backend at Postmates</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/postmates/jobs/1486667?gh_src=843d815d1'>Job Application for Software Engineer, Backend at Postmates</a></h5> 
 <p><span class="badge badge-light">San Francisco Los Angeles</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -155,11 +171,11 @@
 <p><span class="badge badge-light">New York, NY  Canada Australia</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/teacherspayteachers/jobs/1933099'>Job Application for Senior Software Engineer, Data at TeachersPayTeachers</a></h5> 
+<h5><a href='https://boards.greenhouse.io/teacherspayteachers/jobs/1933099'>Job Application for Senior Software Engineer, Data at TeachersPayTeachers</a></h5> 
 <p><span class="badge badge-light">New York  Canada Australia</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oDGvafwI&__jvst=Employee+Referral&__jvsd=smYmMgwd&__jvsc=Twitter&bid=nhoLpMw6'>ServiceNow Careers - Full Stack Software Engineer-CSM</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oDGvafwI&__jvst=Employee+Referral&__jvsd=smYmMgwd&__jvsc=Twitter&bid=nhoLpMw6'>ServiceNow Careers - Full Stack Software Engineer-CSM</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -167,7 +183,7 @@
 <p><span class="badge badge-light">Galway Galway</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Flywire1/743999698593568-senior-software-engineer'>Flywire Senior Software Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Flywire1/743999698593568-senior-software-engineer'>Flywire Senior Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -287,7 +303,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/menlosecurity/jobs/4501326002'>Job Application for Front End Software Engineer at Menlo Security</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/menlosecurity/jobs/4501326002'>Job Application for Front End Software Engineer at Menlo Security</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -426,22 +442,6 @@
 <h5><a href='https://careers.jobscore.com/careers/ariasystems/jobs/workflow-software-engineer-dcSCwKKsCr6ByyaICoXfFy'>Workflow Software Engineer #0191 job at Aria Systems in Iowa City, IA, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oucM9fwl&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nyAlpMw9'>Guidewire Software, Inc. Careers - Senior Software Engineer -  San Mateo, CA</a></h5> 
-<p><span class="badge badge-light">San Mateo, CA  San Mateo, CA  San Mateo, California</span></p>
-<p>Posted on:: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Playtech/743999698547853-software-developer-java-and-java-script-m-f-'>Playtech Software Developer - Java and Java Script (m/f) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Wien, Austria  Vienna London Malm?</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698548858-etas-embedded-software-engineer-project-manager'>Bosch Group ETAS_Embedded Software Engineer ? Project Manager | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobswipe.co/jobs/5dba914f63f9f8b25208c740'>Siemens if hiring - Software Engineer | JobSwipe</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-31</p>
 <hr/>
 
 
