--- a/frontend.html
+++ b/frontend.html
@@ -108,7 +108,7 @@
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://mindcurv.applytojob.com/apply/L5PvuvCm75/Developer-Front-End'>Developer Front End - mindcurv - Career Page</a></h5> 
+<h5><a href='http://mindcurv.applytojob.com/apply/L5PvuvCm75/Developer-Front-End'>Developer Front End - mindcurv - Career Page</a></h5> 
 <p><span class="badge badge-light">Kerala, India</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -186,17 +186,17 @@
 <p><span class="badge badge-light">K?ln, Deutschland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://4finance.recruiterbox.com/jobs/fk03ioy/'>
+<h5><a href='https://4finance.recruiterbox.com/jobs/fk03ioy/'>
     Senior Frontend Developer at 4Finance IT
 </a></h5> 
 <p><span class="badge badge-light">Prague</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Outsourced1/743999698546909-front-end-shopify-developer'>outsourced Front End Shopify Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Outsourced1/743999698546909-front-end-shopify-developer'>outsourced Front End Shopify Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Outsourced1/743999698547010-shopify-front-end-developer'>outsourced Shopify Front End Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Outsourced1/743999698547010-shopify-front-end-developer'>outsourced Shopify Front End Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -240,7 +240,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://getcaya.join.com/jobs/471531-react-native-front-end-developer-m-w-x'>Job @ CAYA (Berlin): (REACT NATIVE) FRONT-END DEVE... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://getcaya.join.com/jobs/471531-react-native-front-end-developer-m-w-x'>Job @ CAYA (Berlin): (REACT NATIVE) FRONT-END DEVE... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -322,7 +322,7 @@
 <p><span class="badge badge-light">Dublin Dublin Dublin Dublin</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://4finance.recruiterbox.com/jobs/fk03ioy'>
+<h5><a href='http://4finance.recruiterbox.com/jobs/fk03ioy'>
     Senior Frontend Developer at 4Finance IT
 </a></h5> 
 <p><span class="badge badge-light">Prague</span></p>
@@ -356,7 +356,7 @@
 <p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/DataFactory/743999698489548-front-end-engineer-remote'>DataFactory Front End Engineer - Remote | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/DataFactory/743999698489548-front-end-engineer-remote'>DataFactory Front End Engineer - Remote | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Washington, DCUnited States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -382,7 +382,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://sparkcognition.applytojob.com/apply/CbTOgT6iN4/Front-End-Engineer-DeepNLP'>Front End Engineer - DeepNLP - SparkCognition - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sparkcognition.applytojob.com/apply/CbTOgT6iN4/Front-End-Engineer-DeepNLP'>Front End Engineer - DeepNLP - SparkCognition - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 19, 2019 ... Apply to Front End Engineer - DeepNLP at SparkCognition in Austin, TX.</p>
 <hr/>
